test/files/neg/macro-invalidret-typemacros/Impls_Macros_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls_Macros {
  def foo(c: Ctx) = c.universe.reify(2)
  type Foo = macro foo
}